# bank_model_server

./: .gitignore  API_DESIGN.md  API_DESIGN_v2.md  API_GUIDE.md  DATABASE_README.md  LICENSE  README.md  REFACTORING_GUIDE.md  config.py  database_schema.sql  environment.yaml  init_db.py  pyproject.toml  requirements.txt  run.py  start_server.bat  test_migration.py
apiDoc/: api.md
app/: __init__.py  tasks.py
app/main/: __init__.py  controllers.py  routes.py  schemas.py  task_service.py
model/: __init__.py  hydrodynamic_resource.py  modelCaseReference.py  modelLauncher.py  modelProcess.py
model/flowFieldTextureBuilder/: CMakeLists.txt
model/flowFieldTextureBuilder/include/: FlowField.h
model/flowFieldTextureBuilder/source/: FlowField.cpp  main.cpp
modelResource/: 模型使用指南.md  模型实例机制详解.md
modelResource/erosionModel/: BSTEM_xls.py  erosionModel.py  test.py
modelResource/erosionModel/Excel_source_codes/: xcel.py  xcel_fx.py
modelResource/erosionModel/Excel_source_codes/worksheets/: sheet1.xml  sheet10.xml  sheet11.xml  sheet12.xml  sheet2.xml  sheet3.xml  sheet4.xml  sheet5.xml  sheet6.xml  sheet7.xml  sheet8.xml  sheet9.xml
modelResource/multipleIndicators/: antiImpactSpeed.py  flowEquivalent.py  heightDifference.py  loadControl.py  nearshoreFlush.py  riskLevel.py  slopeProtection.py  slopeRate.py  soilComposition.py  waterLevelFluctuation.py  模型使用指南.md
modelResource/numericalModel/: flowFieldVelocity.py  hydrodynamic.py  realHydrodynamic.py
modelResource/riverbedEvolution/: flushContour.py  regionFlush.py  riverVolume.py  sectionContrast.py  sectionView.py
util/: __init__.py  db.py  db_admin.py  db_ops.py  geo.py  import_hydrodynamic.py  import_params.py  structure.py  system.py
